GUI 리디렉션 구현 완료, GUI MainWindow 관련 기능 공부 및 구현 필요

--- a/Solution2/mainwindow.ui
+++ b/Solution2/mainwindow.ui
@@ -272,6 +272,7 @@ border-image:url(:/images/logo.png);
       </property>
      </widget>
     </widget>
+    <widget class="QWidget" name="page"/>
    </widget>
   </widget>
  </widget>
