--- a/Solution2/mainwindow.ui
+++ b/Solution2/mainwindow.ui
@@ -29,7 +29,7 @@ border-image:url(:/images/bg1.jpg)0 0 0 0 stretch stretch;
       <x>0</x>
       <y>0</y>
       <width>781</width>
-      <height>741</height>
+      <height>751</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -67,7 +67,7 @@ border-image:url(:/images/bg1.jpg)0 0 0 0 stretch stretch;
 </string>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="login">
      <widget class="QFrame" name="frame_2">
@@ -126,7 +126,7 @@ border-image:url(:/images/bg1.jpg)0 0 0 0 stretch stretch;
 {
 background:transparent;
 border:none;
-clolr:#717072;
+color:#717072;
 border-bottom:1px solid #717072;
 }</string>
         </property>
@@ -154,7 +154,7 @@ border-bottom:1px solid #717072;
 {
 background:transparent;
 border:none;
-clolr:#717072;
+color:#717072;
 border-bottom:1px solid #717072;
 }</string>
         </property>
@@ -359,44 +359,146 @@ border-bottom:1px solid #717072;
       </widget>
      </widget>
     </widget>
-    <widget class="QWidget" name="room_1">
+    <widget class="QWidget" name="room_515">
      <property name="styleSheet">
-      <string notr="true">#room_1
+      <string notr="true">#room_515
 {
 	border-image:url(:/images/bg1.jpg)0 0 0 0 stretch stretch;
 }</string>
      </property>
-     <widget class="QTextEdit" name="Chatting_log">
+     <widget class="QFrame" name="frame_4">
       <property name="geometry">
        <rect>
-        <x>70</x>
-        <y>30</y>
-        <width>571</width>
-        <height>531</height>
+        <x>0</x>
+        <y>0</y>
+        <width>781</width>
+        <height>731</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">#frame_4
+{
+	background:rgba(0,0,0,0.2);
+}</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+      <widget class="QTextEdit" name="Chatting_log">
+       <property name="geometry">
+        <rect>
+         <x>60</x>
+         <y>30</y>
+         <width>571</width>
+         <height>531</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit_msg">
+       <property name="geometry">
+        <rect>
+         <x>110</x>
+         <y>640</y>
+         <width>441</width>
+         <height>31</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="send">
+       <property name="geometry">
+        <rect>
+         <x>570</x>
+         <y>630</y>
+         <width>161</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>send</string>
+       </property>
+      </widget>
      </widget>
-     <widget class="QLineEdit" name="lineEdit_msg">
+    </widget>
+    <widget class="QWidget" name="room_516">
+     <property name="styleSheet">
+      <string notr="true">#room_516
+{
+	border-image:url(:/images/bg1.jpg)0 0 0 0 stretch stretch;
+}</string>
+     </property>
+     <widget class="QFrame" name="frame_5">
       <property name="geometry">
        <rect>
-        <x>70</x>
-        <y>630</y>
-        <width>441</width>
-        <height>31</height>
+        <x>0</x>
+        <y>0</y>
+        <width>781</width>
+        <height>741</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">#frame_5
+{
+	background:rgba(0,0,0,0.2);
+}</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+      <widget class="QTextEdit" name="textEdit">
+       <property name="geometry">
+        <rect>
+         <x>110</x>
+         <y>70</y>
+         <width>461</width>
+         <height>441</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit">
+       <property name="geometry">
+        <rect>
+         <x>80</x>
+         <y>620</y>
+         <width>531</width>
+         <height>41</height>
+        </rect>
+       </property>
+      </widget>
      </widget>
-     <widget class="QPushButton" name="send">
+    </widget>
+    <widget class="QWidget" name="room_517">
+     <property name="styleSheet">
+      <string notr="true">#room_517
+{
+	border-image:url(:/images/bg1.jpg)0 0 0 0 stretch stretch;
+}</string>
+     </property>
+     <widget class="QFrame" name="frame_6">
       <property name="geometry">
        <rect>
-        <x>540</x>
-        <y>620</y>
-        <width>161</width>
-        <height>51</height>
+        <x>0</x>
+        <y>0</y>
+        <width>781</width>
+        <height>741</height>
        </rect>
       </property>
-      <property name="text">
-       <string>send</string>
+      <property name="styleSheet">
+       <string notr="true">#frame_6
+{
+	background:rgba(0,0,0,0.2);
+}</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
       </property>
      </widget>
     </widget>
