--- a/Solution2/mainwindow.ui
+++ b/Solution2/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>781</width>
+    <width>1111</width>
     <height>736</height>
    </rect>
   </property>
@@ -28,7 +28,7 @@ border-image:url(:/images/bg1.jpg)0 0 0 0 stretch stretch;
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>781</width>
+      <width>1111</width>
       <height>751</height>
      </rect>
     </property>
@@ -75,8 +75,8 @@ border-image:url(:/images/bg1.jpg)0 0 0 0 stretch stretch;
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>781</width>
-        <height>741</height>
+        <width>1111</width>
+        <height>751</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -94,8 +94,8 @@ border-image:url(:/images/bg1.jpg)0 0 0 0 stretch stretch;
       <widget class="QFrame" name="frame">
        <property name="geometry">
         <rect>
-         <x>170</x>
-         <y>110</y>
+         <x>640</x>
+         <y>150</y>
          <width>441</width>
          <height>521</height>
         </rect>
@@ -292,7 +292,7 @@ border-bottom:1px solid #717072;
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>781</width>
+        <width>1111</width>
         <height>741</height>
        </rect>
       </property>
@@ -308,23 +308,10 @@ border-bottom:1px solid #717072;
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <widget class="QPushButton" name="Button_toHome">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>680</y>
-         <width>171</width>
-         <height>51</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Log Out</string>
-       </property>
-      </widget>
       <widget class="QPushButton" name="Button_makeRoom">
        <property name="geometry">
         <rect>
-         <x>600</x>
+         <x>930</x>
          <y>670</y>
          <width>161</width>
          <height>51</height>
@@ -334,28 +321,92 @@ border-bottom:1px solid #717072;
         <string>Make Room</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton">
-       <property name="geometry">
-        <rect>
-         <x>280</x>
-         <y>670</y>
-         <width>191</width>
-         <height>61</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>PushButton</string>
-       </property>
-      </widget>
       <widget class="QTableWidget" name="tableWidget_roomlist">
        <property name="geometry">
         <rect>
-         <x>20</x>
-         <y>20</y>
-         <width>731</width>
-         <height>581</height>
+         <x>40</x>
+         <y>140</y>
+         <width>1021</width>
+         <height>441</height>
         </rect>
        </property>
+       <property name="styleSheet">
+        <string notr="true">#tableWidget_roomlist
+{
+	background-color:rgba(255,255,255,0.7);
+}</string>
+       </property>
+      </widget>
+      <widget class="QFrame" name="frame_7">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>0</y>
+         <width>1111</width>
+         <height>81</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">#frame_7
+{
+	background-color: rgba(83, 175, 255, 0.7);
+}</string>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::StyledPanel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Raised</enum>
+       </property>
+       <widget class="QToolButton" name="toolButton">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>-10</y>
+          <width>241</width>
+          <height>100</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="src.qrc">
+          <normaloff>:/images/logo.png</normaloff>:/images/logo.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>600</width>
+          <height>600</height>
+         </size>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="Button_toHome">
+        <property name="geometry">
+         <rect>
+          <x>940</x>
+          <y>20</y>
+          <width>151</width>
+          <height>41</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>century gothic</family>
+          <pointsize>-1</pointsize>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">#Button_toHome
+{
+	background-color:rgba(151, 214, 255,0.6);
+}
+</string>
+        </property>
+        <property name="text">
+         <string>LOG OUT</string>
+        </property>
+       </widget>
       </widget>
      </widget>
     </widget>
@@ -371,7 +422,7 @@ border-bottom:1px solid #717072;
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>781</width>
+        <width>1111</width>
         <height>731</height>
        </rect>
       </property>
@@ -387,38 +438,95 @@ border-bottom:1px solid #717072;
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <widget class="QTextEdit" name="Chatting_log">
+      <widget class="QFrame" name="frame_8">
        <property name="geometry">
         <rect>
-         <x>60</x>
-         <y>30</y>
-         <width>571</width>
-         <height>531</height>
+         <x>0</x>
+         <y>0</y>
+         <width>1111</width>
+         <height>81</height>
         </rect>
        </property>
+       <property name="styleSheet">
+        <string notr="true">#frame_8
+{
+	background-color: rgba(83, 175, 255, 0.7);
+}</string>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::StyledPanel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Raised</enum>
+       </property>
+       <widget class="QToolButton" name="toolButton_2">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>-10</y>
+          <width>241</width>
+          <height>100</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="src.qrc">
+          <normaloff>:/images/logo.png</normaloff>:/images/logo.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>600</width>
+          <height>600</height>
+         </size>
+        </property>
+       </widget>
       </widget>
-      <widget class="QLineEdit" name="lineEdit_msg">
+      <widget class="QWidget" name="">
        <property name="geometry">
         <rect>
-         <x>110</x>
-         <y>640</y>
-         <width>441</width>
-         <height>31</height>
+         <x>480</x>
+         <y>170</y>
+         <width>591</width>
+         <height>471</height>
         </rect>
        </property>
-      </widget>
-      <widget class="QPushButton" name="send">
-       <property name="geometry">
-        <rect>
-         <x>570</x>
-         <y>630</y>
-         <width>161</width>
-         <height>51</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>send</string>
-       </property>
+       <layout class="QVBoxLayout" name="verticalLayout">
+        <item>
+         <widget class="QTextEdit" name="Chatting_log"/>
+        </item>
+        <item>
+         <spacer name="verticalSpacer">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Minimum</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <item>
+           <widget class="QLineEdit" name="lineEdit_msg"/>
+          </item>
+          <item>
+           <widget class="QPushButton" name="send">
+            <property name="text">
+             <string>send</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+       </layout>
       </widget>
      </widget>
     </widget>
@@ -434,7 +542,7 @@ border-bottom:1px solid #717072;
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>781</width>
+        <width>1111</width>
         <height>741</height>
        </rect>
       </property>
@@ -450,17 +558,17 @@ border-bottom:1px solid #717072;
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <widget class="QTextEdit" name="textEdit">
+      <widget class="QTextEdit" name="chatting_log_516">
        <property name="geometry">
         <rect>
-         <x>110</x>
-         <y>70</y>
+         <x>250</x>
+         <y>100</y>
          <width>461</width>
          <height>441</height>
         </rect>
        </property>
       </widget>
-      <widget class="QLineEdit" name="lineEdit">
+      <widget class="QLineEdit" name="lineEdit_msg_516">
        <property name="geometry">
         <rect>
          <x>80</x>
@@ -468,6 +576,19 @@ border-bottom:1px solid #717072;
          <width>531</width>
          <height>41</height>
         </rect>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="send_516">
+       <property name="geometry">
+        <rect>
+         <x>630</x>
+         <y>620</y>
+         <width>161</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>send</string>
        </property>
       </widget>
      </widget>
@@ -484,7 +605,7 @@ border-bottom:1px solid #717072;
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>781</width>
+        <width>1111</width>
         <height>741</height>
        </rect>
       </property>
@@ -500,6 +621,39 @@ border-bottom:1px solid #717072;
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
+      <widget class="QTextEdit" name="chatting_log_517">
+       <property name="geometry">
+        <rect>
+         <x>310</x>
+         <y>60</y>
+         <width>461</width>
+         <height>441</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit_msg_517">
+       <property name="geometry">
+        <rect>
+         <x>180</x>
+         <y>610</y>
+         <width>531</width>
+         <height>41</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="send_517">
+       <property name="geometry">
+        <rect>
+         <x>750</x>
+         <y>610</y>
+         <width>161</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>send</string>
+       </property>
+      </widget>
      </widget>
     </widget>
    </widget>
